# trend_arb

./: Cargo.toml
docs/: binance_ws_trading.md  gate_ws_trading.md  okx_implementation_summary.md  okx_ws_trading.md
examples/: advanced_trading_demo.rs  binance_ws_trading.rs  gate_advanced_trading.rs  gate_ws_trading.rs  okx_advanced_trading.rs  okx_ws_trading.rs
src/: lib.rs  main.rs
src/deepdata/: binance_l1.rs  gate_l1.rs  mod.rs  utils.rs
src/fix/: message.rs  session.rs
src/pairs/: binance.rs  gate.rs  mod.rs
src/script/: generate_binance.py  generate_gate.py
src/trade/: binance.rs  gate.rs  mod.rs  okx.rs
src/web_socket/: mod.rs  utils.rs  ws_connection.rs
