[package]
name = "trend_arb"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
log = "0.4.27"
tokio-rustls = "0.26.2"
tokio = { version = "1.46.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls", "rustls-tls-native-roots"] }
tungstenite = { version = "0.27.0", features = ["native-tls", "deflate"] }
rustls = "0.23.29"
webpki-roots = "1.0.2"
url = "2.5.4"
chrono = "0.4.41"
dashmap = "6.1.0"
serde_json = "1.0.141"
serde = { version = "1.0", features = ["derive"] }
sonic-rs = "0.5.3"
env_logger = "0.11.8"
[dependencies.uuid]
version = "1.17.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[patch.crates-io]
tungstenite = { git = "https://github.com/beanqi/tungstenite-rs.git", branch = "permessage-deflate" }
